# TaxonomyConstruction

./: SBU_NLP_method.py  basic_llm_method.py  data_manager.py  dataset_metrics.csv  evaluator.py  fp_reason_analysis.py  implied_edge_analysis.py  lexical_method.py  lora_data_prep.py  lora_train.py  main.py  model_comparison.py  model_normalizer.py  our_method.py  prune_sweep_analysis.py  reasoning_story.py  requirements-lora.txt  strategy_comparison.py  taxollama_method.py  taxonomy_metrics.py  test_lora_prep.py  test_method.py  verify_lora_env.py  vis_benchmarks.py
docs/: precision_clawback.md
taxochunk/: .gitignore  README.md  pyproject.toml
taxochunk/examples/: quickstart.py  with_openai.py
taxochunk/src/taxochunk/: __init__.py  builder.py  cli.py  client.py  export.py  extract.py  graph.py  prompts.py  text.py
taxochunk/tests/: test_build.py
